[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assests/Sprites/Room Tiles/stairs.png" type="Texture" id=1]
[ext_resource path="res://Assests/Sprites/Room Tiles/Wall.png" type="Texture" id=2]
[ext_resource path="res://Assests/Sprites/Room Tiles/Stone.png" type="Texture" id=3]
[ext_resource path="res://Assests/Sprites/Player.png" type="Texture" id=4]
[ext_resource path="res://Assests/Sprites/Room Tiles/Floor.png" type="Texture" id=5]
[ext_resource path="res://Assests/Sprites/Room Tiles/Door.png" type="Texture" id=6]
[ext_resource path="res://Assests/Scripts/BaseGame.gd" type="Script" id=7]
[ext_resource path="res://Assests/Scripts/Player.gd" type="Script" id=8]
[ext_resource path="res://Assests/Sprites/Room Tiles/Black.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Entites/Items/BaseItem.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=4]
0/name = "Door.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Wall.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Floor.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "stairs.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Stone.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 3 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="TileSet" id=5]
0/name = "Black.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="BaseGame" type="Node2D"]
script = ExtResource( 7 )
timer = 0.01
items = [ ExtResource( 10 ) ]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 1
format = 1

[node name="ItemsPlacement" type="Node2D" parent="."]

[node name="VisibilityMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[node name="Player" type="Sprite" parent="."]
position = Vector2( 320, 160 )
texture = ExtResource( 4 )
centered = false
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 16, 16 )
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MoveButtons" type="Node2D" parent="CanvasLayer/Control"]
position = Vector2( 0, 64 )

[node name="Up" type="Button" parent="CanvasLayer/Control/MoveButtons"]
margin_left = 64.0
margin_top = 192.0
margin_right = 128.0
margin_bottom = 224.0
text = "Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="CanvasLayer/Control/MoveButtons"]
margin_top = 224.0
margin_right = 64.0
margin_bottom = 256.0
text = "Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Button" parent="CanvasLayer/Control/MoveButtons"]
margin_left = 64.0
margin_top = 256.0
margin_right = 128.0
margin_bottom = 288.0
text = "Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="CanvasLayer/Control/MoveButtons"]
margin_left = 128.0
margin_top = 224.0
margin_right = 192.0
margin_bottom = 256.0
text = "Right"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="setPlayerPosition" from="." to="Player" method="_on_BaseGame_setPlayerPosition"]
[connection signal="attemptMovement" from="Player" to="." method="_on_Player_attemptMovement"]
[connection signal="pressed" from="CanvasLayer/Control/MoveButtons/Up" to="Player" method="_on_Up_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MoveButtons/Left" to="Player" method="_on_Left_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MoveButtons/Down" to="Player" method="_on_Down_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MoveButtons/Right" to="Player" method="_on_Right_pressed"]
